--- a/src/App/App.css
+++ b/src/App/App.css
@@ -21,7 +21,13 @@ header {
   justify-content: space-between;
   align-items: flex-end;
   background-color: rgba(0, 0, 0, 0.596);
+  z-index: 1
 }
+
+#tsparticles {
+  z-index: -1;
+}
+
 h1 {
   margin: 0;
   font-size: 4vw;
@@ -67,4 +73,5 @@ nav *{
 
 footer {
   bottom: 0;
+  z-index: 1
 }
