--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1920px;
   margin: 0;
-  padding: 0 .5rem;
+  padding: 0;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -9,28 +9,40 @@
   height: 100vh;
   width: 100vw;
 }
+
+h2 {
+  color: whitesmoke;
+  text-shadow: -1px 1px 7px cyan;
+}
+
 .component {
   width: 100vw;
   height: 41.5rem;
 }
 header {
+  color: rgba(0, 255, 255, 0.787);
+  text-shadow: -2px 2px 1px #000;
   margin: 0;
-  width: calc(100vw - .5rem);
+  width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  background-color: rgba(0, 0, 0, 0.596);
+  background-color: #03d1ff34;
   z-index: 1
 }
 
 #tsparticles {
   z-index: -1;
 }
-
+iframe {
+  border-image:
+  conic-gradient(var(--easy-cyan)10% , var(--magenta-border)50%, var(--easy-cyan)80%) 1;
+}
 h1 {
-  margin: 0;
+  margin: 0 0 0 1vw;
   font-size: 4vw;
+  text-shadow: -1px 1px 7px cyan;
 }
 nav *{
   padding: 1vw;
@@ -72,6 +84,11 @@ nav *{
 }
 
 footer {
+  position: fixed;
   bottom: 0;
-  z-index: 1
+  z-index: 1;
+  font-size: 1.25rem;
+  text-shadow: -1px 1px 7px cyan;
+  text-align: center;
+  align-self: center;
 }
