--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,14 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 700;
+  color: #FFF;
+  text-shadow: -1px 1px 7px cyan;
   text-decoration: inherit;
+
 }
 a:hover {
-  color: #535bf2;
+  color: #FFF;
 }
 
 body {
