--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -37,7 +37,7 @@ select {
     padding: 0;
     margin-bottom: .5vh;
 }
-button {
+.submit-button {
     font-size: 1.25rem;
     width: 15vw;
     align-self: center;
